--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@
   }
 }
 
+
 .nav-list a {
   display: block;
   font-size: 2.2rem;
@@ -169,14 +170,22 @@
     padding: 20px;
 }
 
+@media (max-width: 980px) {
+  .welcome-container {
+    display: flex;
+    flex-direction: column;
+}
+}
 
 .content-pull-left {
     float: left;
+    padding: 0 100px;
 }
 
 .content-pull-right {
     float: right;
     padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .welcome-description {
@@ -226,6 +235,10 @@
 
 #profile_picture{
     border-radius: 50%;
+}
+
+#email {
+  margin-top: 2px;
 }
 
 #email:hover > a {
